# timething

./: .envrc  .gitignore  CONTRIBUTORS.md  LICENSE.txt  README.md  Untitled.ipynb  api.ipynb  approximate.ipynb  clean-transcript.ipynb  cli.py  environment.dev.yml  environment.yml  incremental.ipynb  long.ipynb  pyproject.toml  requirements.dev.txt  requirements.txt  scratch.py.po  setup.cfg  shingles.ipynb  test.py
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: publish-to-pypi.yml  python-package.yml
fixtures/: keanu.cleaned.txt  keanu.csv  keanu.txt  text.csv
fixtures/alignments/audio/: born.mp3.json  one.mp3.json  two.mp3.json
notebooks/: api.ipynb  long.ipynb
src/timething/: __init__.py  align.py  cli.py  cutter.py  dataset.py  job.py  llm.py  models.yaml  prealign.py  text.py  utils.py  viz.py
test/: helper.py  test_align.py  test_cutter.py  test_dataset.py  test_job.py  test_text.py  test_utils.py
timething/: align.py  cutter.py  dataset.py  job.py  models.yaml  utils.py
