[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.isort]
profile = "black"
skip = [".gitignore"]
src_paths = ["src", "tests"]

[tool.black]
line-length = 80
extended-include = '''
(
  ^/test/
  ^/src/timething/
)
'''
extended-exclude = '''
(
  __pycache__
  .mypy_cache
  .hypothesis
)
'''

[tool.mypy]
ignore_missing_imports = true
files = [
  "src/**/*.py",
  "tests/*.py",
]
