[metadata]
name = timething
version = 0.0.1
author = FELD Berlin
author_email = rany@feldberlin.com
description = Aligning text transcripts with their audio recordings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feldberlin/timething
project_urls =
    Bug Tracker = https://github.com/feldberlin/timething/issues
license = MIT
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options.entry_points]
console_scripts =
    timething = timething.cli:main

[options]
python_requires = >=3.7
install_requires =
    click
    datasets
    num2words
    numpy
    torch
    tokenizers ==0.10.1
    torchaudio
    transformers ==4.4.2

[flake8]
ignore = E203
exclude = .git
max-complexity = 13
max-line-length = 80
