[metadata]
name = timething
version = attr: timething.__version__
author = FELD Berlin
author_email = rany@feldberlin.com
description = Aligning text transcripts with their audio recordings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feldberlin/timething
project_urls =
    Bug Tracker = https://github.com/feldberlin/timething/issues
license = MIT
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options.entry_points]
console_scripts =
    timething = timething.cli:cli

[options]
python_requires = >=3.7
install_requires =
    click
    datasets
    num2words
    numpy
    torch
    tokenizers ==0.10.1
    torchaudio
    transformers ==4.4.2

[options.package_data]
timething = models.yaml

[flake8]
ignore =
  E203 # whitespace before : conflicts with black
  E503 # linebreak before binary operator : conflicts with black
exclude =
  .git
  .pytest_cache
  .mypy_cache
  .venv
  .env
  .direnv
  .hypothesis
max-complexity = 16
max-line-length = 80
